# libotr-ci-test

./: .gitignore  .travis.yml  TEST  configure.ac
src/: b64.c  context.h
tests/: test_list
tests/regression/: Makefile.am  random-msg-disconnect-auth.sh  random-msg.sh
tests/regression/client/: Makefile.am  client.c  otr.key
tests/unit/: Makefile.am  test_auth.c  test_b64.c  test_context.c  test_dh.c  test_instag.c  test_mem.c  test_privkey.c  test_proto.c  test_sm.c  test_tlv.c  test_userstate.c
